--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -3,12 +3,19 @@
   flex-direction: row;
 }
 .main-container{
+  margin-left: 256px;
   margin-top: 60px;
   flex: 1;
 }
 .sidebar-container{
-  min-height: calc(100vh - 60px);
+  position: fixed;
+  left: 0;
+  top: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   .ant-menu{
+    flex: 1;
     height: 100%;
   }
 }
